--- a/Selu383.SP25.P03.Mobile/app.json
+++ b/Selu383.SP25.P03.Mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Selu383-SP25-P02-Mobile-g0m",
-    "slug": "Selu383-SP25-P02-Mobile-g0m",
+    "name": "Selu383-SP25-P03-Mobile-g03",
+    "slug": "selu383-sp25-p03-Mobile-g03",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -16,7 +16,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.selu383.sp25.p02.g0m"
+      "package": "com.selu383.sp25.p03.g03"
     },
     "web": {
       "bundler": "metro",
@@ -43,7 +43,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "a61893b1-bc13-421d-b719-e44f3e9fc180"
+        "projectId": "9c71d735-bef9-4c0b-a027-979202cc81a6"
       }
     },
     "owner": "kuro11"
