--- a/Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj
+++ b/Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Selu383.SP25.P03.Web\Selu383.SP25.P03.Web.esproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Concessions\" />
+  </ItemGroup>
+
 </Project>
