--- a/Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj
+++ b/Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj
@@ -7,18 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Concessions\**" />
+    <Content Remove="Features\Concessions\**" />
+    <EmbeddedResource Remove="Features\Concessions\**" />
+    <None Remove="Features\Concessions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.0.26" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Selu383.SP25.P03.Web\Selu383.SP25.P03.Web.esproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Concessions\" />
   </ItemGroup>
 
 </Project>
