Add DTO and program change for automapper

--- a/Selu383.SP25.P03.Api/appsettings.json
+++ b/Selu383.SP25.P03.Api/appsettings.json
@@ -6,7 +6,8 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DataContext": "Server=(localdb)\\mssqllocaldb;Database=SP25-P01-G##;Trusted_Connection=True;"
-    }
+  "ConnectionStrings": {
+    //"DataContext": "Server=tcp:cmps383-2025-sp-p03-g03-sql.database.windows.net,1433;Initial Catalog=cmps383-2025-sp-p03-g03-db;Persist Security Info=False;User ID=LocalAdmin;Password=@ccess_2_CMPS383_P02;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DataContext": "Server=tcp:cmps383-2025-sp-p03-g03-sql.database.windows.net,1433;Initial Catalog=cmps383-2025-sp-p03-g03-db;Persist Security Info=False;User ID=LocalAdmin;Password=@ccess_2_CMPS383_P03;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
