--- a/Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj
+++ b/Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Concessions\**" />
+    <Content Remove="Features\Concessions\**" />
+    <EmbeddedResource Remove="Features\Concessions\**" />
+    <None Remove="Features\Concessions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
@@ -21,10 +28,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Selu383.SP25.P03.Web\Selu383.SP25.P03.Web.esproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Concessions\" />
   </ItemGroup>
 
 </Project>
