fixed owner file and mobile

--- a/Selu383.SP25.P03.Mobile/eas.json
+++ b/Selu383.SP25.P03.Mobile/eas.json
@@ -15,7 +15,8 @@
       "autoIncrement": true,
       "android": {
         "buildType": "apk"
-      }
+      },
+      "owner": "cmps383-2025-sp-p03-g03"
     }
   },
   "submit": {
