--- a/Selu383.SP25.P03.Mobile/app.json
+++ b/Selu383.SP25.P03.Mobile/app.json
@@ -46,6 +46,6 @@
         "projectId": "9c71d735-bef9-4c0b-a027-979202cc81a6"
       }
     },
-    "owner": "chad.delatte"
+    "owner": "chrisrichjr"
   }
 }
