Allows you to at least view the pages in the ticket buying process

--- a/Selu383.SP25.P03.Web/package.json
+++ b/Selu383.SP25.P03.Web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.0.12",
     "chart.js": "^4.4.8",
