--- a/Selu383.SP25.P03.Web/package.json
+++ b/Selu383.SP25.P03.Web/package.json
@@ -14,7 +14,9 @@
     "@heroicons/react": "^2.2.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "lucide-react": "^0.485.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
