--- a/Selu383.SP25.P03.Mobile/tsconfig.json
+++ b/Selu383.SP25.P03.Mobile/tsconfig.json
@@ -1,17 +1,25 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "./node_modules/expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react-native",
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "types": ["nativewind", "react", "react-native", "@react-navigation/native"],
+    "moduleResolution": "node16",
+    "module": "Node16"
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
+  
+  
   ]
 }
