--- a/Selu383.SP25.P03.Mobile/tsconfig.json
+++ b/Selu383.SP25.P03.Mobile/tsconfig.json
@@ -5,21 +5,21 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
-    "types": ["nativewind", "react", "react-native", "@react-navigation/native"],
-    "moduleResolution": "node16",
-    "module": "Node16"
+    "types": ["nativewind", "react", "react-native"],
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
-  
-  
+    "nativewind-env.d.ts",
+    
   ]
 }
+
