--- a/Selu383.SP25.P03.Web/package.json
+++ b/Selu383.SP25.P03.Web/package.json
@@ -23,6 +23,7 @@
     "react-headroom": "^3.2.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-use-cart": "^1.14.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.12"
   },
