--- a/Selu383.SP25.P03.Mobile/package.json
+++ b/Selu383.SP25.P03.Mobile/package.json
@@ -19,7 +19,6 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@types/react-navigation": "^3.0.8",
     "axios": "^1.8.4",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
@@ -28,7 +27,7 @@
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.7",
     "expo-linking": "~7.0.5",
-    "expo-router": "^4.0.20",
+    "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -39,28 +38,22 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
-    "autoprefixer": "^10.4.21",
-    "babel-jest": "^29.7.0",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "babel-preset-expo": "^12.0.11",
-    "jest": "^29.7.0",
+    "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
-    "postcss": "^8.5.3",
     "react-test-renderer": "18.3.1",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   },
   "private": true
