--- a/Selu383.SP25.P03.Mobile/tsconfig.json
+++ b/Selu383.SP25.P03.Mobile/tsconfig.json
@@ -1,25 +1,18 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "jsx": "react-native",
     "strict": true,
-    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    },
-    "types": ["nativewind", "react", "react-native"],
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+      "@/*": [
+        "./*"
+      ]
+    }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts",
-    
+    "nativewind-env.d.ts"
   ]
 }
-
