Emailing now available!!!
Not finished but we can now send emails on checkout. The email includes the movie name. There is a way to include an HTML body so we may actually be able to include some fancy formatting.

--- a/Selu383.SP25.P03.Api/appsettings.Development.json
+++ b/Selu383.SP25.P03.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Smtp2Go": {
+  "ApiKey": "api-F5FCE02379BB404690DAA4515449DA68",
+  "Sender": "peyton.perry@selu.edu"
+}
 }
