--- a/Selu383.SP25.P03.Web/package.json
+++ b/Selu383.SP25.P03.Web/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
